--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,9 +512,7 @@ a:hover {
 --------------------------------------------------------------*/
 
 
-/**
-* Desktop Navigation 
-*/
+/* Desktop Navigation */
 
 .navbar {
     padding: 0;
@@ -649,9 +647,7 @@ a:hover {
 }
 
 
-/**
-* Mobile Navigation 
-*/
+/* Mobile Navigation */
 
 .mobile-nav-toggle {
     color: #fff;
@@ -1123,35 +1119,6 @@ a:hover {
     text-align: center;
     padding: 15px;
     font-weight: 600;
-}
-
-.php-email-form .sent-message {
-    display: none;
-    color: #fff;
-    background: #18d26e;
-    text-align: center;
-    padding: 15px;
-    font-weight: 600;
-}
-
-.php-email-form .loading {
-    display: none;
-    background: #fff;
-    text-align: center;
-    padding: 15px;
-}
-
-.php-email-form .loading:before {
-    content: "";
-    display: inline-block;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    margin: 0 10px -6px 0;
-    border: 3px solid #18d26e;
-    border-top-color: #eee;
-    -webkit-animation: animate-loading 1s linear infinite;
-    animation: animate-loading 1s linear infinite;
 }
 
 .php-email-form input,
