--- a/Proyecto1/style.css
+++ b/Proyecto1/style.css
@@ -1,326 +1,594 @@
-* {
-    box-sizing: border-box;
+*{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+
 }
 
-body {
+
+body {   
+    width: 100%;
+    height: 100%;
+    font-family: sans-serif;
+    letter-spacing: 0.03em;
+    line-height: 1.6;
     background-color: black;
-    color: blanchedalmond;
-    background-color: #d47066;
-    background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23000000' fill-opacity='0.2'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-    font-size: 16px;
-    font-family: 'Oswald', sans-serif;
 }
 
-a {
-    color: white;
-    text-decoration: 0;
+/* barra de navegacion*/
+
+.navbar{    
+    background-color: #2196F3;
+    padding: 10px 20px 10px 30px;
+    border: 1px solid white;
+    border-left: none;
+    border-right: none;
+    color: blanchedalmond;   
+    position: relative;
+    z-index:1;
+    
+}
+.navbar .btninicio {
+  background: none;
+  border: none;
 }
 
-ul {
-    list-style: none;
+.navbar .btn1{
+  color: blanchedalmond;
+  font-size: 20px;
+  cursor:pointer;
+  display: none;
 }
 
-.container {
-    margin: auto;
-    width: 90%;
+.navbar .btn1.cancel-btn{
+  position: absolute;
+  right: 30px;
+  top: 10px;
 }
 
 
-/* Navigation */
-
-.nav-main {
-    font-size: 17px;
+.navbar .ul1{
     display: flex;
-    justify-content: space-between;
+    list-style: none;
+    flex-wrap: wrap;
     align-items: center;
-    height: 60px;
-    padding: 20px0;
+    justify-content: center;
+    padding-top: 10px;
+    
 }
+
 
 .nav-brand {
-    width: 50px;
+    
+    width: 250px;
+}
+.navbar .items{
+
+    
+    display:inline-flex;
+    position: relative;
+    
+   
 }
 
-
-/*Nav Left*/
-
-.nav-main ul {
-    display: flex;
+.navbar  .items a{
+text-decoration: none;
+font-family: 'Titillium Web', sans-serif;
+font-size: 24px;
+padding: 0 18px;
+color: blanchedalmond;
 }
 
-.nav-main ul li {
-    padding: 10px;
+.mobile-items{
+  text-decoration: none;
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 24px;
+  padding: 0 18px;
+  color: blanchedalmond;
+  display: none;
 }
 
-.nav-main ul li a {
-    padding: 2px;
-}
-
-.nav-main ul li a:hover {
-    border-bottom: 2px solid #ffffff;
-}
-
-.nav-main ul.nav-menu {
-    flex: 1;
-    margin-left: 20px;
-}
-
-.menu-btn {
+.drowdown-menu{
     position: absolute;
-    cursor: pointer;
-    top: 15px;
-    right: 30px;
-    z-index: 2;
-    display: none;
+    background-color: rgb(1, 46, 61);
+    visibility: hidden;
+    padding: 0;
+    opacity: 0;
+    transition: opacity 1.5s;
+    list-style: none;
+    text-align: left;
+    border: none;
+   
 }
 
-
-/*Nav Left*/
-
-.nav-menu-right {
-    font-family: 'Rock Salt', cursive;
+.navbar .items a:hover{
+color: gray;
+transition: all 0.7s;
 }
 
+.navbar .items li:hover .drowdown-menu{
+    visibility: visible;
+    opacity: 1;
+    
+    }
 
-/*SHOWCASE*/
 
-hr {
-    margin: 10px 0;
-}
-
-.showcase {
-    width: 100%;
-    height: 550px;
-    background: url(/Proyecto1/img/pappo.jpg) no-repeat center center/cover;
-    padding: 50px;
-    margin-bottom: 20px;
+.navbar .search-icon{    
+    height: 40px;
+    width: 240px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    position: relative;
+    border: 0.5px solid gray;
+    
+}
+
+.navbar .search-icon input{
+    height: 100%;
+    width: 200px;
+    border: none;
+    outline: none;
+    padding: 0 10px;
+    color: #000;
+    font-size: 16px;
+    border-radius: 5px 0 0 5px;
+    cursor: pointer;
+}
+
+.navbar .search-icon .icon{
+    height: 100%;
+    width: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid #cccccc;
+    border-radius: 0 5px 5px 0;
+
+
+}
+
+.navbar .search-icon .icon:hover{
+
+background: #e6e6e6;
+
+}
+
+
+.navbar .search-icon .icon i{
+
+    color: #222222;
+    font-size: 18px;
+}
+
+.navbar ul li.btn{
+    font-size: 29px;
+    flex: 1;
+    padding: 0 40px;
+    display: none;
+  }
+
+.navbar ul li.btn span{
+    height: 42px;
+    width: 42px;
+    text-align: center;
+    line-height: 42px;
+    border: 1px solid #151515;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+.navbar ul li.btn span.show:before{
+    content: '\f00d';
+  }
+
+.checkbtn{
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+  float: right;
+  display: none;
+}
+
+.checkbtn1{
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+  float: right;
+  display: none;
+}
+
+.checkbtn2{
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+  float: right;
+  display: none;
+}
+
+#check{
+  display: none;
+}
+
+/* Menu responsive*/
+
+@media screen and (max-width: 1052px) {
+  .navbar{
+    padding: 10px 40px 10px 0px;
+  }
+  
+  
+}
+
+  @media (max-width: 852px){
+
+    .navbar {
+      padding: 10px;
+    }
+    
+    .nav-brand{
+      display: none;
+    }
+    .navbar .ul1 {
+      justify-content: flex-start;
+      padding-left: 0px;
+  }
+    .navbar .items{
+      z-index: 1;
+      display: none;
+      position: fixed;
+      background: #14181f;
+      height: 100vh;
+      width: 250px;
+      max-width: 350px;
+      top: 0;
+      left: 0%;
+      overflow-y: auto;    
+    }
+
+    .navbar .items.show {
+      display: block;
+  }
+   
+    .navbar .btn1{      
+      display: block;
+    }
+    
+
+    .navbar .items a{
+     padding: 0 20px 0 50px;
+    }
+
+    .drowdown-menu{
+    position: static;
+    opacity: 1;
+    visibility: visible;
+    top: 65px;
+    padding-left: 20px;
+    width: 100%;
+    max-height: 0px;
+    overflow:hidden;
+    }
+
+    #showdrop:checked ~ .drowdown-menu{
+      max-height: 100%;
+    }
+    .desktop-items{
+      display: none;
+    }
+    
+    
+    .mobile-items{
+      display: block;
+      padding-left: 20px;
+      cursor: pointer;
+      padding: 0 50px;
+    }
+
+    
+  }
+    
+ 
+/* container y tarjetas*/
+
+
+.container{
+    position:relative;
+    top: 0;
+    width: 100%;
+    max-width: 1200px;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin:auto;
+    
+}
+
+.container .card{
+    
+    width: 250px;
+    height: 405px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+    background-color: black;
+    border: 0.5px solid #cccccc;
+   
+}
+
+.container .card:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+
+}
+
+
+
+.container .card-img-top{
+    width: 250px;
+    height: 250px;
+    image-orientation: center;
+    
+}
+
+.container .card-title{
+    font-weight: 400;
+    color:whitesmoke
+    
+    
+}
+
+.container .card-text{
+ font-weight: 150;
+ text-decoration: none;
+ color: whitesmoke;   
+ font-family: 'Titillium Web', sans-serif;
+}
+
+.container .btn-primary{
+ background-color: #2196F3;
+ 
+ align-items:center
+   
+}
+
+.container a{
+    
+    color:white;
+   }
+
+
+
+h1 {
+    font-style: bold;
+    font-size: 54px;
+    color: antiquewhite;
+    text-align: center;
+    font-family: 'Titillium Web', sans-serif;
+   
+}
+
+
+/* boton de scroll*/
+
+.scroll-top-btn {
+    position: fixed;
+    bottom: 1vh;
+    right: 1vw;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    font-size: 2rem;
+    font-weight: bold;
+    background-color: #2196F3;
+    color: white;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
+    transition: all 0.3s ease-out;
+}
+
+.scroll-top-btn:hover {
+    background-color: white;
+    color: #2196F3;
+}
+
+.hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+
+/* Formulario contacto*/
+
+:root {
+    --font: 'Oxygen', sans-serif;
+    --primary: #2196F3;
+    --black: black;
+  }
+
+
+h2 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 55px;
+    line-height: 77px;
+    color: whitesmoke;
+    font-family: 'Titillium Web', sans-serif;
+  }
+
+.formu{
+    color: whitesmoke;
+    font-size: 18px;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 .btn {
+    /* font-family: var(--font); */
+    border-radius: 90px;
+    letter-spacing: 1.25px;
+    background: initial;
+    block-size: 50px;
+    display: block;
     cursor: pointer;
-    display: inline-block;
-    border: 0;
-    font-weight: bold;
-    padding: 10px 20px;
-    background-color: #262626;
-    color: white #ffffff;
-    font-size: 15px;
-    border: 1px solid #ffffff;
-    margin: 10pf 0;
-}
-
-.btn:hover {
-    opacity: .9;
-}
-
-.showcase h2 {
-    margin-bottom: 10px;
-    background-color: black;
-    font-size: 32px;
-}
-
-.showcase p {
-    margin-bottom: 10px;
-    background-color: black;
-    font-size: 22px;
-}
-
-
-/*News cards*/
-
-.news-cards {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 25px;
-    margin: 10px 0;
-}
-
-.news-cards img {
-    width: 100%;
-    height: 200px;
-}
-
-.news-cards h3 {
-    font-size: 20px;
-    margin: 10px 0;
-    color: #f2f2f2;
+    user-select: none;
+    box-sizing: border-box;
+    font-size: 14px;
     text-transform: uppercase;
-    display: inline-block;
-    font-weight: bold;
-}
-
-.news-cards a :hover {
-    text-decoration: underline;
-}
-
-
-/* Cards banner one */
-
-.cards-banner-one {
-    width: 100%;
-    height: 350px;
-    background: url(/Proyecto1/img/rock.jpg) no-repeat center center/cover;
-    margin-bottom: 40px;
-}
-
-.cards-banner-one .content {
-    width: 40%;
-    padding: 90px 0 0 30px;
-    color: #ffff
-}
-
-.cards-banner-one h2 {
-    margin: 10px 0 20px 0;
-}
-
-.cards-banner-one p {
-    margin: 10px 0 20px 0;
-    font-size: 20px;
-    color: whitesmoke;
-}
-
-
-/* Cards banner two */
-
-.cards-banner-two {
-    width: 100%;
-    height: 350px;
-    background: url(/Proyecto1/img/rock2.jpg) no-repeat center center/cover;
-}
-
-.cards-banner-two .content {
-    width: 50%;
-    padding: 90px 0 0 30px;
-    color: red
-}
-
-.cards-banner-two p,
-.cards-banner-two h2 {
-    margin: 10px 0 20px 0;
-}
-
-
-/* Social */
-
-.social {
-    margin: 50px;
-}
-
-.social p {
     text-align: center;
-    font-size: 30px;
-    margin-bottom: 20px;
+    line-height: 50px;
+    border: 2px solid var(--black);
+    font-weight: bold;
+    padding: 0 1.5em;
+  }
+  .btn.full {
+    width: 100%;
+  }
+  
+  .btn.primary {
+    background: var(--primary);
+  }
+  
+  
+  .hero {
+    margin-block-end: 80px;
+  }
+  
+  
+  .form {
+    max-inline-size: 550px;
+    margin: auto;
+  }
+  
+  .form label {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: .5em;
+    padding-inline-start: .5em;
+  }
+  
+  .form label span {
+    color: #DA1414;
+  }
+  
+  .form input, .form textarea {
+    box-sizing: border-box;
+    width: 100%;
+    font-size: 1rem;
+    padding: .8em;
+    border-radius: .5em;
+    border: 1px solid #858C94;
+  }
+  .form textarea {
+    margin-block-end: 2em;
+    font-family: inherit;
+  }
+  
+  input::-webkit-input-placeholder {
+    color: #0F0A0A88;
+  }
+  
+  
+  .contact {
+    margin-block-end: 5em;
+  }
+  
+  
+  @media screen and (min-width: 768px) {
+    .hero-content {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: "description image";
+    }
+    
+    .form .tag span {
+      display: block;
+      text-align: center;
+    }
+  
+  }
+  
+/* Footer*/
+
+footer{
+    position:relative;
+    bottom: 0;   
+    left: 0;
+    right: 0;
+    background-color: #111;
+    height: auto;
+    width: 100%;
+    font-family: "Open Sans";
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #fff;
 }
 
-.links {
+.footer-content{
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.links a {
-    margin: 0 15px;
-}
-
-.links a i {
-    font-size: 2rem;
-}
-
-
-/* Footer Links */
-
-.footer-links {
-    background: grey;
-    color: #616161;
-    font-size: 12px;
-    padding: 35px 0;
-}
-
-.footer-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    align-items: flex-start;
-    justify-content: center;
-}
-
-.footer-container ul {
-    margin: 0 auto;
-}
-
-.footer-container ul li {
-    line-height: 2;
-}
-
-.footer {
-    background: #2f3640;
-    color: #616161;
-    font-size: 12px;
-    padding: 20px 0;
+    flex-direction: column;
     text-align: center;
-    padding-bottom: ;
 }
 
-
-/* Display size */
-
-@media (max-width: 700px) {
-    .menu-btn {
-        display: block;
-    }
-    .nav-main ul.nav-menu {
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: #2f3640;
-        height: 100%;
-        padding: 30px;
-        opacity: 0.9;
-        transform: translateX(-400px);
-        transition: transform .5s ease-in-out;
-    }
-    .nav-main ul.nav-menu.show {
-        transform: translateX(-20px);
-    }
-    .nav-main ul.nav.menu li {
-        padding: 20px;
-        font size: 14px;
-    }
-    .nav-main ul.nav-menu-right {
-        margin-right: 40px;
-    }
-    .news-cards {
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .cards-banner-one,
-    .cards-banner-two {
-        width: 80%;
-    }
-    .footer-links .footer-container {
-        grid-template-columns: repeat(2, 1fr);
-    }
+.footer-content h3{
+    font-size: 1.8rem;
+    font-weight: 500;
+    text-transform: capitalize;
+    line-height: 3rem;
 }
 
-@media (max-width: 500px) {
-    .news-cards {
-        grid-template-columns: 1fr;
-    }
-    .news-cards img {
-        height: 270px;
-    }
-    .cards-banner-one .content,
-    .cards-banner-two .content {
-        width: 100%;
-        padding: 60px 20px;
-    }
-    .footer-links .footer-container {
-        grid-template-columns: 1fr;
-    }
+.footer-content p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+.socials{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 1rem 0;
+}
+
+.socials li{
+   margin: 0 10px;
+}
+
+.socials a{
+    text-decoration: none;
+    color: #fff
+}
+
+.socials a.i{
+    font-size: 1.1rem;
+    transition: color .4s ease;
+}
+
+.socials a:hover i{
+    color: aqua;
+}
+
+.footer-bottom{
+    background-color: black;
+    width: 100vw;
+    padding: 10px 0;
+    text-align: center;
+}
+
+.footer-bottom p{
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
+
+.footer-bottom span{
+    text-transform: uppercase;
+    opacity: .4;
+    font-weight: 200;
 }
